<resources>
    <string name="app_name">Calculator</string>
    <string name="clear">clear</string>
    <string name="percent">%</string>
    <string name="division">÷</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">X</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equally">=</string>
    <string name="zero">0</string>
    <string name="double_zero">00</string>
    <string name="point">.</string>
    <string name="advanced">Advanced</string>
    <string name="result">Рассчитать</string>
    <string name="piHint">Введите точность расчета числа π</string>
    <string name="eHint">Введите точность расчета числа e</string>
    <string name="pi">Число ПИ</string>
    <string name="e">Число Е</string>
    <string name="percent_pattern">%s %%</string>
    <string name="start">Рассчитать</string>
    <string name="stop">Остановить</string>
    <string name="end">Расчет закончен</string>
</resources>